@@ -587,6 +587,7 @@ Other memory:
 	* Added stat() to fs layer
 	* Added stat() supported to FAT
 	* Fixed reference counting errors associated with mounted filesystems
+	* Added fat_getattrib() and fat_setattrib()
 	* Started m68322
 </pre></ul>
 
